<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Explorer of Settlement</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

    <!-- General -->
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="confirm">Confirm</string>
    <string name="back">Back</string>
    
    <!-- Time -->
    <string name="month_january">January</string>
    <string name="month_february">February</string>
    <string name="month_march">March</string>
    <string name="month_april">April</string>
    <string name="month_may">May</string>
    <string name="month_june">June</string>
    <string name="month_july">July</string>
    <string name="month_august">August</string>
    <string name="month_september">September</string>
    <string name="month_october">October</string>
    <string name="month_november">November</string>
    <string name="month_December">December</string>

    <string name="time_midnight">Midnight</string>
    <string name="time_morning">Morning</string>
    <string name="time_noon">Noon</string>
    <string name="time_afternoon">Afternoon</string>
    <string name="time_evening">evening</string>
    <string name="time_night">Night</string>

    <!-- Title -->
    <string name="title_button_start">Touch and START!</string>
    <string name="title_text_version_info">Version : %s</string>
    <string name="title_button_new_start">New Game</string>
    <string name="title_button_continue">Continue</string>
    <string name="title_text_copyright">Copyright (c) 2015 NantokaSoft All Rights Reserved.</string>

    <!-- Settlement -->
    <string name="settle_state_time_format">Second Era %3$d %2$s, %1$d %4$s</string>

    <!-- Achievements View -->
    <string name="acv_text_acv_name_default">Achievement</string>

    <!-- Main Menu -->
    <string name="mainmenu_save_and_load">Save &amp; Load</string>
    <string name="mainmenu_setting">Settings</string>
    <string name="mainmenu_gameend">Game End</string>

    <!-- Title Menu -->
    <string name="titlemenu_achievements">Achievements</string>
    <string name="titlemenu_setting">Settings</string>
    <string name="titlemenu_versioninfo">Version Info</string>
    <string name="titlemenu_start_debug">Debug Menu</string>
    <string name="titlemenu_quit">Quit</string>

    <!-- Menu -->
    <string name="menu_load">Load</string>
    <string name="menu_save">Save</string>
    <string name="menu_achievements">Achievements</string>
    <string name="menu_versioninfo">Version Info</string>
    <string name="menu_start_debug">Debug Menu</string>
    <string name="menu_quit">Quit</string>
    <string name="menu_setting">Settings</string>
    <string name="menu_return_title">Return to Title</string>

    <!-- image.System -->
    <string name="sys_dialogtitle">System</string>
    <string name="sys_msg_confirm_gameend">Are you sure you want to exit?</string>
    <string name="sys_msg_confirm_back_title">Are you sure you want to go back to Title?</string>
    <string name="sys_msg_confirm_run_debug">Are you sure you want to run to Debug Mode?</string>
    <string name="sys_msg_wip">I\'m sorry.\nThis function is not implemented yet.</string>
    <string name="sys_version_name">v %s</string>

    <!-- System.ItemCategory.Name -->
    <!-- test Edition -->
    <string name="sys_item_category_1">Category 1</string>
    <string name="sys_item_category_2">Category 2</string>
    <string name="sys_item_category_3">Category 3</string>

    <!-- System.ItemQuality.Name -->
    <!-- test Edition -->
    <string name="sys_item_quality_good">good</string>
    <string name="sys_item_quality_normal">normal</string>
    <string name="sys_item_quality_poor">poor</string>

</resources>
