<?xml version="1.0" encoding="utf-8"?>

<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:tools="http://schemas.android.com/tools">

    <!-- TODO 作成済みアイコンを追加して指定 -->
    <item
        android:id="@+id/menu_title_achievements"
        android:icon="@android:drawable/ic_menu_myplaces"
        android:title="@string/titlemenu_achievements"/>
    <item
        android:id="@+id/menu_title_settings"
        android:icon="@android:drawable/ic_menu_manage"
        android:title="@string/titlemenu_setting"/>
    <item
        android:id="@+id/menu_title_version_info"
        android:icon="@android:drawable/ic_menu_info_details"
        android:title="@string/titlemenu_versioninfo"/>
    <item
        android:id="@+id/menu_title_start_debug"
        android:icon="@android:drawable/ic_menu_manage"
        android:title="@string/titlemenu_start_debug"/>
    <item
        android:id="@+id/menu_title_quit"
        android:icon="@android:drawable/ic_menu_close_clear_cancel"
        android:title="@string/titlemenu_quit"/>

</menu>