<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/background_title_test">

    <!-- TODO タイトルロゴを分離してアニメーションを付ける -->

    <!-- 続きから -->
    <Button
        android:id="@+id/part_title_continueButton"
        android:layout_width="192dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_marginBottom="16dp"
        android:layout_marginRight="16dp"
        android:text="@string/title_button_continue"/>

    <!-- はじめから -->
    <Button
        android:id="@+id/part_title_newStartButton"
        android:layout_width="192dp"
        android:layout_height="wrap_content"
        android:layout_above="@+id/part_title_continueButton"
        android:layout_alignParentRight="true"
        android:layout_marginBottom="4dp"
        android:layout_marginRight="16dp"
        android:text="@string/title_button_new_start"/>

    <!-- Copyright -->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_marginBottom="4dp"
        android:layout_marginLeft="8dp"
        android:text="@string/title_text_copyright"
        android:textSize="12dp"/>
</RelativeLayout>