<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@null">

    <!-- TODO タイトルロゴを分離してアニメーションを付ける -->

    <ImageButton
        android:id="@+id/title_part_settingsButton"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:layout_margin="4dp"
        android:background="@drawable/icon_background"
        android:scaleType="centerInside"
        android:src="@drawable/icon_setting"/>

    <!-- 続きから -->
    <Button
        android:id="@+id/title_part_continueButton"
        android:layout_width="192dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_marginBottom="16dp"
        android:layout_marginRight="16dp"
        android:text="@string/title_button_continue"/>

    <!-- はじめから -->
    <Button
        android:id="@+id/title_part_newStartButton"
        android:layout_width="192dp"
        android:layout_height="wrap_content"
        android:layout_above="@+id/title_part_continueButton"
        android:layout_alignParentRight="true"
        android:layout_marginBottom="4dp"
        android:layout_marginRight="16dp"
        android:text="@string/title_button_new_start"/>

    <!-- Copyright -->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_marginBottom="4dp"
        android:layout_marginLeft="8dp"
        android:text="@string/title_text_copyright"
        android:textSize="12dp"/>
</RelativeLayout>